[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmfuzz"
version = "0.1.0"
description = "llmfuzz CLI"
requires-python = ">=3.11"

[project.scripts]
llmfuzz = "llmfuzz.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["llmfuzz*"]
